# game-show-controller

./: .env.example  .gitignore  .npmrc  config.example.yaml  config.yaml  dev.sh  docker-compose.yml  gameshow-control copy.tosc  gameshow-control.tosc  main.py  mise.toml  package-lock.json  package.json  port_forward.sh  pyproject.toml  requirements.txt  test1-pager-only.tosc  test2-buttons-no-osc.tosc  test3-buttons-with-osc.tosc
docs/: control_surface.md  show_asset_checklist.md
gameshow/: audio.py  bus.py  config.py  control_surface.py  dmx_client.py  events.py  keyboard.py  obs_client.py  osc_map.py  osc_server.py  scene_manager.py  shows.py  state_machine.py
plans/: configurable-state-machine.md  multi-format-state-machines.md  stream-deck-control-surface.md  touchosc-from-config.md
shows/: default.yaml  family_feud.yaml  pyramid.yaml  trivia.yml
stories/: 001-72a8-complete-P1-config-schema-validation-for-data-driven-state-mac.md  002-4a9d-complete-P1-drop-gamestate-enum-statechanged-new-state-becomes.md  002-4a9d-in_progress-P1-drop-gamestate-enum-statechanged-new-state-becomes.md  002-4a9d-pending-P1-drop-gamestate-enum-statechanged-new-state-becomes.md  003-8885-complete-P1-rewrite-statemachine-as-a-config-driven-interprete.md  003-8885-pending-P1-rewrite-statemachine-as-a-config-driven-interprete.md  004-790f-complete-P1-update-state-consumers-to-string-states.md  004-790f-pending-P1-update-state-consumers-to-string-states.md  005-d8e7-complete-P1-migrate-config-yaml-and-config-example-yaml-to-new.md  (+13 more)
tests/: test_audio.py  test_bus.py  test_config.py  (+11 more)
(+11 files in other folders)
